adding some text and updating airy pattern fig

--- a/lecture12/lecture12.tex
+++ b/lecture12/lecture12.tex
@@ -200,12 +200,16 @@ $1 \ \mrm{deg} = \pi / 180 \ \mrm{rad}, 1 \ \mrm{arcmin} = 1/60 \ \mrm{deg}, 1 \
 $\Rightarrow 1 \ \mrm{arcsec} = \pi / 180 / 3600 \ \mrm{rad} \approx 4.85 \times 10^{-6} \ \mrm{rad}$ \\ \\
 \textbf{Question:} What is 1 pc in SI units (m)? \\
 \textbf{Answer:}
-\begin{equation}
-D = \frac{d}{p} = \frac{1.496 \times 10^{11} }{4.85 \times 10^{-6}} = 3.09 \times 10^{16} \ \mrm{m}
-\end{equation}
+\begin{align}
+D &= \frac{d}{p} = \frac{1.496 \times 10^{11} }{4.85 \times 10^{-6}} = 3.09 \times 10^{16} \ \mrm{m} \nonumber \\
+ &= 3.26 \:\mrm{light \mhyphen year}
+\end{align}
+
 
 \section{Angular resolution}
-It is important to understand how the properties of our telescopes impact angular resolution. Diffraction around a circular aperture is a concept that is discussed in most introductory physics textbooks. 
+It is important to understand how the properties of our telescopes impact angular resolution. We observe the universe using telescopes that couple light to detector elements of various shapes and sizes. The properties of these detector elements are tuned so that the devices are sensitive to the frequency range (wavelength) that we want to study. However, there is one fundamental rule that applies to all telescopes. This rule sets a fundamental limit to the angular resolution of our telescopes.
+
+Diffraction around a circular aperture is a concept that is discussed in most introductory physics textbooks. The pattern that emerges if you shine a circular aperture with a plane wave and then look at the diffraction pattern on a screen placed some distance away from the aperture is called an Airy pattern.\footnote{This experiment is often a part of introductory lab courses in physics.}
 
 A plane wave illuminating a circular aperture of diameter $d$ will generate a diffraction pattern. This diffraction pattern is particularly strong if the dimensions of the circular aperture is similar in size to the wavelength of the incident electromagnetic radiation.
 
