adding a note about textbook

--- a/lecture11/lecture11.tex
+++ b/lecture11/lecture11.tex
@@ -167,7 +167,7 @@ Jon E. Gudmundsson\footnote{\href{http://jon.fysik.su.se}{\linkc{http://jon.fysi
 The third part of this course is meant to provide a very brief introduction to basic astrophysics and cosmology. The coursebook for this part is Andrew R.\ Liddle's \textit{An Introduction to Cosmology} (3rd edition), although the first lecture also references material in Martin's \textit{Nuclear and particle physics} (2nd edition).\footnote{A 3rd edition of Martin's textbook exists, but we are basing our lectures on the 2nd edition. For those that only have access to 3rd edition, please reach out to me if you can't find the equivalent sections in your book.} The lecture notes will cover the topics that are most important for this course. These lecture notes are largely based on the notes passed on from Prof.\ Lars Bergström and Prof.\ Jan Conrad who taught this class in 2018. Also, a signification fraction of the below lecture notes represent abbreviated versions of the textbook discussion.
 
 \begin{attention}
-This lecture should to be complemented by M2.3, M8.1, M8.2, M9.1.4, L12
+This lecture should to be complemented by M2.1-M2.3, M8.1, M8.2, M9.1.4 (only the neutrino astrophysics part), and chapter 12 of Liddle (L12). Note that M2.3, M8.1, M8.2, and M9.1.4 in version 2 of Martin's textbook correspond to M2.1-M2.3, M9.1, M9.2, and M10.5.1 (only the neutrino astrophysics part) in the 3rd version of the textbook. Also note that for chapters M2.1-M2.3, the topics that are reviewed in these lecture are included.
 %\begin{align}
 %E &= mc^2 & \text{Formula of the universe}
 %\end{align}
