--- a/lecture12/lecture12.tex
+++ b/lecture12/lecture12.tex
@@ -205,8 +205,15 @@ D &= \frac{d}{p} = \frac{1.496 \times 10^{11} }{4.85 \times 10^{-6}} = 3.09 \tim
  &= 3.26 \:\mrm{light \mhyphen year}
 \end{align}
 
-
 \section{Angular resolution}
+\begin{figure}[t]
+\begin{center}
+    \includegraphics*[angle=0,width=0.8\textwidth]{img/airy_pattern.png}
+    \caption[Insert text]{Airy pattern describing plane wave diffraction from a circular aperture with diameter $a$.}
+\label{fig:airy}
+\end{center}
+\end{figure}
+
 It is important to understand how the properties of our telescopes impact angular resolution. We observe the universe using telescopes that couple light to detector elements of various shapes and sizes. The properties of these detector elements are tuned so that the devices are sensitive to the frequency range (wavelength) that we want to study. However, there is one fundamental rule that applies to all telescopes. This rule sets a fundamental limit to the angular resolution of our telescopes.
 
 Diffraction around a circular aperture is a concept that is discussed in most introductory physics textbooks. The pattern that emerges if you shine a circular aperture with a plane wave and then look at the diffraction pattern on a screen placed some distance away from the aperture is called an Airy pattern.\footnote{This experiment is often a part of introductory lab courses in physics.}
@@ -221,15 +228,6 @@ where $J_1(\theta)$ is the Bessel function of the first kind and of order one, a
 \begin{equation}
 \sin (\theta) = 1.22 \lambda /d.
 \end{equation}
-
-\begin{figure}[t]
-\begin{center}
-    \includegraphics*[angle=0,width=0.8\textwidth]{img/airy_pattern.png}
-    \caption[Insert text]{Airy pattern describing plane wave diffraction from a circular aperture with diameter $a$.}
-\label{fig:airy}
-\end{center}
-\end{figure}
-
 
 \section{Luminosity and magnitudes}
 The the photosphere of the sun is at roughly $5780 \:\mrm{K}$. The radius of the sun is $R_\odot = 6.96 \times 10^{8} \:\mrm{m}$. According to the Stefan-Boltzmann law, the luminosity of the sun is found to be
@@ -334,11 +332,11 @@ where $c$ is the speed of light in vacuum (roughly $2.998 \times 10^{8} \:\mrm{m
  
 \textbf{Definitions:} The Copernican principle states that we, as observers of the universe, do not have the benefit of a privileged vantage point. The cosmological principle states that on large enough scales, the universe is both homogenous and isotropic. 
  
-Homogenity: The universe looks the same at each point.
+Homogeneity: The universe looks the same at each point.
 
 Isotropy: The universe looks the same in every direction.
 
-Modern sky surveys suggest that our local universe is isotropic and homogenous over the largest scales that we can observer and we assume that this is a property of the universe as a whole.
+Modern sky surveys suggest that our local universe is isotropic and homogenous over the largest scales that we can ob server and we assume that this is a property of the universe as a whole.
 
  \begin{note}
  The popular literature contains a wealth of publications with brilliant descriptions of the early days of cosmology \cite{Lemaitre2005, Guth1997, Singh2005, Weinberg1993}. As astronomical observatories accumulated data, it became clear that the universe contained a large number of galaxies similar to our own. So far, nothing suggests our own galaxy is much different from the estimated hundreds of billions of galaxies in the observable universe. Similarly, our location in the Milky Way, our own galaxy, seems arbitrary. This gives some credence to the Copernican principle.
