--- a/lecture14/lecture14.tex
+++ b/lecture14/lecture14.tex
@@ -376,10 +376,16 @@ Noting that $4\pi G / (3 H_0^{2})$ is a constant we see that "fluids" with a pos
 \section{Connection to exam}
 \textit{It can be useful to connect the lecture material to types of questions that might possible pop up on an exam. Here's a typical exam question:}
 
-\textbf{Question:} We assume that Type Ia variables are standard candles and therefore that their luminosity is fixed, $L = L_\mrm{sn}$. We observe a supernova in a satellite galaxy of the Milky Way (our own galaxy) and thankfully we also have observations of cepheid variables that help us determine the distance to this supernova, $R_0$. The flux from this supernova is $F_0$. We now detect a supernova in what appears to be a distant galaxy. The relative magnitude of this supernova compared to close-by supernova is $\Delta m = +9$. Assuming that the luminosity of these two stellar remnants is the same. Derive an equation that describes the distance to the far-away supernova in terms of $R_0$ and $z$ for \textbf{a)} a universe that is static; \textbf{b)} in a universe that is expanding such that $a(t_0)/a(t) = 1 + z$ where $a(t)$ is the scale factor and $z$ is the redshift.
+\textbf{Question:} We assume that Type Ia variables are standard candles and therefore that their luminosity is fixed, $L = L_\mrm{sn}$ (see Figure \ref{fig:problem}). We observe a supernova in a satellite galaxy of the Milky Way (our own galaxy) and thankfully we also have observations of cepheid variables that help us determine the distance to this supernova, $R_0$. The flux from this supernova is $F_0$. We now detect a supernova in what appears to be a distant galaxy. The relative magnitude of this supernova compared to close-by supernova is $\Delta m = +9$. Assuming that the luminosity of these two stellar remnants is the same. Derive an equation that describes the distance to the far-away supernova in terms of $R_0$ and $z$ for \textbf{a)} a universe that is static; \textbf{b)} in a universe that is expanding such that $a(t_0)/a(t) = 1 + z$ where $a(t)$ is the scale factor and $z$ is the redshift.
 
 \textbf{Answer:} 
-
+\begin{figure}[t]
+\begin{center}
+    \includegraphics*[angle=0,width=0.7\textwidth]{img/problem.png}
+    \caption[Problem setup]{Problem setup.}
+\label{fig:problem}
+\end{center}
+\end{figure}
 \textbf{a)} From lecture 11, in a static universe we know that the apparent magnitude can be written as
 \begin{equation}
 m _0 = -2.5 \log _{10}  \left( \frac{F_0}{F _\mrm{ref}} \right) + \mrm{const}.
