hydrogen/helium --> neutrons/protons

--- a/lecture11/lecture11.tex
+++ b/lecture11/lecture11.tex
@@ -347,7 +347,7 @@ Neutrons and protons are coupled through the following conversion process
 n + \nu _e &\longleftrightarrow  p + e^-, \\
 n + e^+ &\longleftrightarrow p + \bar{\nu}_e.
 \end{align}
-As long as these processes continue at a sufficient rate, the two particles remain in thermal equilibrium. We find that the reaction rate is high as long as $k_\mrm{B}T \simeq 0.8 \:\mrm{MeV}$ ($T\simeq10^{10}\:\mrm{K}$), but eventually this process dies down and the relative number density of hydrogen versus helium is
+As long as these processes continue at a sufficient rate, the two particles remain in thermal equilibrium. We find that the reaction rate is high as long as $k_\mrm{B}T \simeq 0.8 \:\mrm{MeV}$ ($T\simeq10^{10}\:\mrm{K}$), but eventually this process dies down and the relative number density of neutrons versus protons is
 \begin{equation}
 \frac{N_n}{N_p} \simeq \exp \left( - \frac{1.3 \:\mrm{MeV}}{0.8 \:\mrm{MeV}} \right) \simeq \frac{1}{5}. 
 \end{equation}
