fixed typo in equation

--- a/lecture15/lecture15.tex
+++ b/lecture15/lecture15.tex
@@ -255,7 +255,7 @@ B(f, T) = \frac{2hf^{3}}{c^{2}}\frac{1}{\exp(hf /k_{\mrm{B}}T) -1},
 \end{equation}
 where $h$ and $k_{\mrm{B}}$ are Planck and Boltzmann constants respectively, $T$ is the blackbody temperature, and $c$ is the speed of light in vacuum. The corresponding energy density is
 \begin{equation}
-\epsilon (f, T) df = \frac{8\pi hf^{3}}{c^{3}}\frac{1}{\exp(hf /k_{\mrm{B}}T) -1},
+\epsilon (f, T) = \frac{8\pi hf^{3}}{c^{3}}\frac{1}{\exp(hf /k_{\mrm{B}}T) -1},
 \end{equation}
 We can integrate the following expression over all frequencies to find the energy density in a blackbody radiation field of temperature $T$ (see Chapter 2 in Liddle and Francesco's tutorial). This gives
 \begin{equation}
