--- a/lecture11/lecture11.tex
+++ b/lecture11/lecture11.tex
@@ -175,7 +175,7 @@ This lecture should to be complemented by M2.1-M2.3, M8.1, M8.2, M9.1.4 (only th
 \end{attention}
 
 \section{Short (and simplified) introduction}
-The standard cosmological model assumes a Big Bang (some kind of beginning) and a mechanism that facilitates rapid expansion and cooling of space followed by basic element production (hydrogen and helium). Random over-densities in a primordial matter distribution cause gravitational in-fall and matter accumulation in certain locations of space that eventually leads to star formation. Some of these stars are short-lived (the massive ones) and eventually die in a supernova explosion. These explosions are responsible for expelling heavy nuclear elements that are a key ingredient for things like rocky planets and the evolution of evolve. %Most chemical elements that we observe today are generated in supernova explosions. 
+The standard cosmological model assumes a Big Bang (some kind of beginning) and a mechanism that facilitates rapid expansion and cooling of space followed by basic element production (hydrogen and helium). Random over-densities in a primordial matter distribution cause gravitational in-fall and matter accumulation in certain locations of space that eventually leads to star formation. Some of these stars are short-lived (the massive ones) and eventually die in a supernova explosion. These explosions are responsible for expelling heavy nuclear elements that are a key ingredient for things like rocky planets and the evolution of life. %Most chemical elements that we observe today are generated in supernova explosions. 
 
 \begin{figure}[t]
 \begin{center}
@@ -186,7 +186,7 @@ The standard cosmological model assumes a Big Bang (some kind of beginning) and 
 \end{figure}
 
 \section{The stars and our sun}
-There are ways (absorption spectrometry) to measure the chemical composition of the sun. Figure \ref{fig:chemica_dist} shows one example of such a measurement. Things to note:
+There are ways (absorption spectrometry) to measure the chemical composition of the sun. Figure \ref{fig:chemica_dist} shows how such measurements can be used to estimate the fractional abundance of elements in the sun. Things to note:
 \begin{itemize}
 \item Clearly hydrogen and helium make up most of the sun's mass
 \item Note the lack of lithium, beryllium, and boron
@@ -222,7 +222,7 @@ For those that are interested, the derivation for a Maxwell-Boltzmann velocity d
 \end{note}
 
 \section{The Coulomb barrier }
-The Coulomb barrier is the energy required to bring two nuclei close enough together to undergo a nuclear reaction (to fuse). Figure \ref{fig:binding_energy} shows the binding energy as a function of atomic mass number.
+The Coulomb barrier is the energy required to bring two nuclei close enough together to undergo a nuclear reaction (to fuse). Figure \ref{fig:binding_energy} shows the binding energy as a function of atomic mass number, $A$.
 \begin{align}
 V_C &= \frac{1}{4\pi\epsilon _0} \frac{Z Z^{\prime} e^{2}}{R+R^{\prime}} \nonumber \\[4pt]
  &= \left( \frac{e^{2}}{4\pi\epsilon _0 \hbar c} \right) \frac{\hbar c ZZ^\prime}{1.2[A^{1/3} + (A^\prime)^{1/3}] \:\mrm{fm}} \nonumber \\[4pt]
@@ -232,7 +232,7 @@ We can for example assume that $A \approx A^\prime \approx 2Z \approx 2Z^\prime$
 \begin{equation}
 V_C \approx 0.15 A^{5/3} \:\mrm{MeV}.
 \end{equation}
-If we assume that $A \approx 8$ we get $V_C \approx 4.8 \:\mrm{MeV}$. This is the energy that has to be supplied, for example via kinetic energy, to overcome the Coulomb barrier. It turns out, however, that it is difficult to supply this amount of energy by simply colliding streams of nuclei together at high velocities. Instead, the trick is to provide the conditions for overcoming by this barrier via thermal energy; by heating a collection of nuclei. We can do a rough estimate by using standard thermodynamics relation 
+If we assume that $A \approx 8$ (beryllium) we get $V_C \approx 4.8 \:\mrm{MeV}$. This is the energy that has to be supplied, for example via kinetic energy, to overcome the Coulomb barrier. It turns out, however, that it is difficult to supply this amount of energy by simply colliding streams of nuclei together at high velocities. Instead, the trick is to provide the conditions for overcoming by this barrier via thermal energy; by heating a collection of nuclei. We can do a rough estimate by using standard thermodynamics relation 
 \begin{equation}
 E \simeq kT,
 \end{equation}
@@ -320,7 +320,7 @@ N_p / (dN_p / dt) \approx 2.4 \times 10^{18} \: \mrm{s} \approx 8 \times 10^{10}
 to convert all of its hydrogen into helium. A more accurate estimate suggests that our sun should live for about 10 billion years ($10^{10}$).
 
 \section{Big bang nucleosynthesis}
-Big bang nucleosynthesis (BBN) is a concept that is commonly brought up in both astrophysical and cosmological context. It describes the physics of element production during the early stages in the history of our universe. For those who are interested, Steven Weinberg wrote a famous book called \textit{The First Three Minutes} \cite{Weinberg1993}.
+Big bang nucleosynthesis (BBN) is a concept that is commonly brought up in both astrophysical and cosmological context. It describes the physics of element production during the early stages in the history of our universe. For those who are interested, Steven Weinberg wrote a famous book called \textit{The First Three Minutes}~\cite{Weinberg1993}.
 
 Chapter 12 in Liddle discusses light element production, in particular hydrogen and helium, during the first few minutes in the history of our big bang cosmological model. Some concepts to take away from this chapter include:
 \begin{itemize}
@@ -448,7 +448,7 @@ Some neutron star properties include:
 A lot is still unknown about the physics that are in play during the formation of a neutron stars. 
 \end{note}
 
-\section{Kamiokande, Amanda, and IceCube}
+\section{Kamiokande, Amanda, and IceCube (Optional)}
 Famously, the Kamiokande and IMB experiments measured a stream of neutrinos in their water Cherenkov detectors in 1987.\footnote{These neutrinos are thought to have come from SN1987A} This signal was then used to constrain the mass of the neutrinos (see discussion in Liddle 9.1.4). The 2002 Nobel prize in physics was in part awarded for the work leading to the detection of cosmic neutrinos.
 
 We estimate roughly 2-3 supernova events per century in our galaxy. We expect that such a supernova event will register in experiments like Super-Kamiokande (see Figure \ref{fig:skamiokande}). Within seconds of this happening, the collaboration hopes to be able to send alarms to other astrophysical observatories. The data from modern-day observations of a nearby supernova would likely revolutionize our understanding of various phenomena. The 2015 Nobel prize in physics was awarded in recognition of Super-Kamiokande measurements of neutrino oscillations. 
@@ -468,15 +468,15 @@ The IceCube experiment has significant contributions from Stockholm University. 
 \end{note}
 
 
-\section{List of important concepts [non-exhaustive]}
-Here are some important concepts and questions to take away from the material covered in this lecture (and in the corresponding chapters in the textbooks):
-\vspace{-7mm}
-\begin{itemize}
-\item What elements are thought to be generated during big bang nucleosynthesis?
-\item What is the half-life time of a neutron in isolation? What is the half-life time of a proton?
-\item The Chandrasekhar limit is the maximum mass of a stable white dwarf. Best estimates put that value at about $1.4 M_\odot$.
-\item The Pauli exclusion principle states that fermions have to occupy distinct quantum states within quantum mechanical system. 
-\end{itemize}
+%\section{List of important concepts [non-exhaustive]}
+%Here are some important concepts and questions to take away from the material covered in this lecture (and in the corresponding chapters in the textbooks):
+%\vspace{-7mm}
+%\begin{itemize}
+%\item What elements are thought to be generated during big bang nucleosynthesis?
+%\item What is the half-life time of a neutron in isolation? What is the half-life time of a proton?
+%\item The Chandrasekhar limit is the maximum mass of a stable white dwarf. Best estimates put that value at about $1.4 M_\odot$.
+%\item The Pauli exclusion principle states that fermions have to occupy distinct quantum states within quantum mechanical system. 
+%\end{itemize}
 
 \begingroup
 %\bibliographystyle{unsrt85}
