--- a/lecture12/lecture12.tex
+++ b/lecture12/lecture12.tex
@@ -190,9 +190,9 @@ Figure \ref{fig:parallax} shows setup for distance measurement via parallax angl
 
 We find that some stars on the night-sky appear to move significantly over half a year, while other remain fixed. The stars that seem to move with respect to the fixed background are therefore closer to us than the rest.
 
-Recently, the European Space Agency launched a satellite mission that mapped stars in our Galaxy using exactly this approach. The satellite mission, Gaia, has an angular resolution of approximately $25 \times 10^{-6}$ arcsec which effectively means that the experiment can measure distance to 20 million star with roughly 1\% accuracy.
+Recently, the European Space Agency launched a satellite mission that mapped stars in our Galaxy using exactly this approach. The satellite mission, Gaia, has an angular resolution of approximately $0.06$ arcsec and uses a novel astrometry method that allows it to measure distances to roughly 20 million star with 1\% accuracy.
 
-For larger distances, the parallax angle becomes too small and we have to resort to different methods. One of this relies on so-called standard candles (see e.g.\ discussion about supernovas in future lectures).
+For objects outside our own galaxy, the parallax angle becomes too small and we have to resort to different methods. One of this relies on so-called standard candles (see e.g.\ discussion about supernovas in future lectures).
 
 \textbf{Definition:} \\
 1 pc (parsec) is the distance which gives $p = 1 \ \mrm{arcsec}$ \\
@@ -216,7 +216,7 @@ D &= \frac{d}{p} = \frac{1.496 \times 10^{11} }{4.85 \times 10^{-6}} = 3.09 \tim
 
 It is important to understand how the properties of our telescopes impact angular resolution. We observe the universe using telescopes that couple light to detector elements of various shapes and sizes. The properties of these detector elements are tuned so that the devices are sensitive to the frequency range (wavelength) that we want to study. However, there is one fundamental rule that applies to all telescopes. This rule sets a fundamental limit to the angular resolution of our telescopes.
 
-Diffraction around a circular aperture is a concept that is discussed in most introductory physics textbooks. The pattern that emerges if you shine a circular aperture with a plane wave and then look at the diffraction pattern on a screen placed some distance away from the aperture is called an Airy pattern.\footnote{This experiment is often a part of introductory lab courses in physics.}
+Diffraction around a circular aperture is a concept that is discussed in most introductory physics textbooks. The pattern that emerges if you shine a circular aperture with a plane wave and then look at the diffraction pattern on a screen placed some distance away from the aperture is called an Airy pattern.\footnote{This experiment is often a part of introductory physics lab courses using lasers.}
 
 A plane wave illuminating a circular aperture of diameter $d$ will generate a diffraction pattern. This diffraction pattern is particularly strong if the dimensions of the circular aperture is similar in size to the wavelength of the incident electromagnetic radiation.
 
@@ -228,9 +228,11 @@ where $J_1(\theta)$ is the Bessel function of the first kind and of order one, a
 \begin{equation}
 \sin (\theta) = 1.22 \lambda /d.
 \end{equation}
+Using this equation, you can calculate the angular resolution of a telescope if you know the telescope's diameter and observing wavelength.
+
 
 \section{Luminosity and magnitudes}
-The the photosphere of the sun is at roughly $5780 \:\mrm{K}$. The radius of the sun is $R_\odot = 6.96 \times 10^{8} \:\mrm{m}$. According to the Stefan-Boltzmann law, the luminosity of the sun is found to be
+The photosphere of the sun is at roughly $5780 \:\mrm{K}$. The radius of the sun is $R_\odot = 6.96 \times 10^{8} \:\mrm{m}$. According to the Stefan-Boltzmann law, the luminosity of the sun is found to be
 \begin{equation}
 L _\odot = 4\pi R_\odot ^{2} \times \sigma _\mrm{SB} T^{4} = 3.8 \times 10^{26} \:\mrm{W}.
 \end{equation}
@@ -238,7 +240,9 @@ The flux, defined as the power per unit area, is therefore
 \begin{equation}
 F = \frac{L_\odot}{4\pi r^{2}} \approx 1350 \:\mrm{W/m}^{2}
 \end{equation}
+\begin{note}
 Compare this number with the expected output of a $1 \:\mrm{m}^{2}$ solar panel.
+\end{note}
 
 Astronomers tend to use magnitudes to describe the brightness of objects on the sky. The definition of apparent magnitude is 
 \begin{equation}
