--- a/lecture12/lecture12.tex
+++ b/lecture12/lecture12.tex
@@ -334,7 +334,7 @@ where $c$ is the speed of light in vacuum (roughly $2.998 \times 10^{8} \:\mrm{m
 \end{center}
 \end{figure}
  
-\textbf{Definitions:} The Copernican principle states that we, as observers of the universe, do not have the benefit of a privileged vantage point. The cosmological principle states that on large enough scales, the universe is both homogenous and isotropic. 
+\textbf{Definitions:} The cosmological principle states that we, as observers of the universe, do not have the benefit of a privileged vantage point. This implies on large enough scales, the properties of the universe are the same for all observers. This relates to the concepts of homogeneity and isotropy:
  
 Homogeneity: The universe looks the same at each point.
 
