--- a/lecture12/lecture12.tex
+++ b/lecture12/lecture12.tex
@@ -381,7 +381,7 @@ Notice that this answer is independent of the present separation $d$. This sugge
 \section{Blackbody Radiation}
 The Planck blackbody radiation formula plays a crucial role in cosmology
 \begin{equation}
-B(\nu, T) = \frac{2hf^3}{c^2} \frac{1}{e^\frac{hf}{k_\mrm{B}T} - 1} \quad [\mrm{W/m^2/Hz/sr}].
+B(f, T) = \frac{2hf^3}{c^2} \frac{1}{e^\frac{hf}{k_\mrm{B}T} - 1} \quad [\mrm{W/m^2/Hz/sr}].
 \label{eq:bb}
 \end{equation}
 The equation describes the spectral radiance of a blackbody as a function of frequency and the temperature of the blackbody. The universe is permiated with radiation that can be well characterized as that of a $2.7\:\mrm{K}$ blackbody. This is the so-called cosmic microwave background (CMB).
