--- a/lecture11/lecture11.tex
+++ b/lecture11/lecture11.tex
@@ -371,7 +371,7 @@ which gives
 \begin{equation}
 R \sim \frac{\hbar ^2}{G m_e m_p^2} \left( \frac{M}{m_p} \right)^{-1/3}.
 \end{equation}
-Somewhat surprisingly, the size of a white dwarf goes down as you increase its mass. Obviously, the above derivation made many simplifying assumptions, but the rough result is still valid. The more accurate derivation was Chandrasekhar and others. Stars at the end of their life whose mass exceeds the Chandrasekhar limit evolve to become neutron stars.
+Somewhat surprisingly, the size of a white dwarf goes down as you increase its mass. Obviously, the above derivation made many simplifying assumptions, but the rough result is still valid. The more accurate derivation was Chandrasekhar and others. %Stars at the end of their life whose mass exceeds the Chandrasekhar limit evolve to become a neutron stars or black holes.
 
 %\begin{note}
 %This estimate
@@ -379,7 +379,7 @@ Somewhat surprisingly, the size of a white dwarf goes down as you increase its m
 
 \subsection{Neutron stars}
 \label{seq:neutron_star}
-If the mass of a star exceeds the Chandrasekhar limit, \mbox{$M > 1.4 M_\odot$}, it will evolve to become a neutron star. In the case of very massive stars, the run of events can look something like the following:
+If the mass of a star exceeds the Chandrasekhar limit, \mbox{$M > 1.4 M_\odot$}, it will evolve to become a neutron star or a black hole. In the case of very massive stars, the run of events can look something like the following:
 \begin{enumerate}
 \item Stars with mass greater than about 11 solar masses ($M_\odot$) can evolve through all stages of fusion ending in a core of iron surrounded by shells of lighter elements
 \item Thermonuclear fusion of iron is not possible and therefore the core will contract under gravity
